--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,12 @@
   --foreground: #000000;
 }
 
+body {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .bg {
   background: url('/bg-desktop-light.jpg') no-repeat;
   background-size: cover;
@@ -35,17 +41,11 @@
 
 html[data-theme='dark'] {
   --background: #181824;
-  --foreground: #ffffff;
+  --foreground: hsl(0, 0%, 98%);
 
   .bg {
     background: url('/bg-desktop-dark.jpg') no-repeat;
     background-size: cover;
     height: 18.75rem;
   }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
 }
